--- a/event.html
+++ b/event.html
@@ -125,7 +125,7 @@
 
 
         <!-- Event start -->
-        <section class="Event pt-50 pb-100 mb-100" id="event">
+        <section class="Event pt-100 pb-100" id="event">
             <div class="container">
 
                 <div class="sorting">
@@ -256,17 +256,10 @@
                                 React?
                             </p>
 
-                            <div class="date">
-                                <div class="icon">
-                                    <i class="fas fa-calendar-alt"></i>
-                                </div>
-                                <p>Minggu, 22 November 2020</p>
-                            </div>
-
                             <h3>Rp 25.000</h3>
 
                             <div class="btnEvent">
-                                <button>Daftar Event</button>
+                                <button class="btn btn-primary">Daftar Event</button>
                             </div>
                         </a>
 
@@ -281,17 +274,10 @@
                                 React?
                             </p>
 
-                            <div class="date">
-                                <div class="icon">
-                                    <i class="fas fa-calendar-alt"></i>
-                                </div>
-                                <p>Minggu, 22 November 2020</p>
-                            </div>
-
                             <h3>Rp 25.000</h3>
 
                             <div class="btnEvent">
-                                <button>Daftar Event</button>
+                                <button class="btn btn-primary">Daftar Event</button>
                             </div>
                         </a>
 
@@ -306,17 +292,10 @@
                                 React?
                             </p>
 
-                            <div class="date">
-                                <div class="icon">
-                                    <i class="fas fa-calendar-alt"></i>
-                                </div>
-                                <p>Minggu, 22 November 2020</p>
-                            </div>
-
                             <h3>Rp 25.000</h3>
 
                             <div class="btnEvent">
-                                <button>Daftar Event</button>
+                                <button class="btn btn-primary">Daftar Event</button>
                             </div>
                         </a>
 
@@ -331,17 +310,10 @@
                                 React?
                             </p>
 
-                            <div class="date">
-                                <div class="icon">
-                                    <i class="fas fa-calendar-alt"></i>
-                                </div>
-                                <p>Minggu, 22 November 2020</p>
-                            </div>
-
                             <h3>Rp 25.000</h3>
 
                             <div class="btnEvent">
-                                <button>Daftar Event</button>
+                                <button class="btn btn-primary">Daftar Event</button>
                             </div>
                         </a>
 
@@ -357,17 +329,10 @@
                                 React?
                             </p>
 
-                            <div class="date">
-                                <div class="icon">
-                                    <i class="fas fa-calendar-alt"></i>
-                                </div>
-                                <p>Minggu, 22 November 2020</p>
-                            </div>
-
                             <h3>Rp 25.000</h3>
 
                             <div class="btnEvent">
-                                <button>Daftar Event</button>
+                                <button class="btn btn-primary">Daftar Event</button>
                             </div>
                         </a>
 
@@ -381,23 +346,16 @@
                                 React?
                             </p>
 
-                            <div class="date">
-                                <div class="icon">
-                                    <i class="fas fa-calendar-alt"></i>
-                                </div>
-                                <p>Minggu, 22 November 2020</p>
-                            </div>
-
                             <h3>Rp 25.000</h3>
 
                             <div class="btnEvent">
-                                <button>Daftar Event</button>
+                                <button class="btn btn-primary">Daftar Event</button>
                             </div>
                         </a>
 
 
 
-                        <button class="selengkapnya">Load More</button>
+                        <button class="selengkapnya btn btn-primary">Load More</button>
                     </div>
 
 
@@ -582,20 +540,21 @@
                         <h2>Membangun Form & Melakukan Integration Testing dengan JavaScript & ReactJS</h2>
                         <p>
                             Ingin mengenal lebih lanjut tentang React? Fitur apa saja yang dapat kamu bangun menggunakan
+                            React?Ingin mengenal lebih lanjut tentang React? Fitur apa saja yang dapat kamu bangun
+                            menggunakan
+                            React?Ingin mengenal lebih lanjut tentang React? Fitur apa saja yang dapat kamu bangun
+                            menggunakan
+                            React?Ingin mengenal lebih lanjut tentang React? Fitur apa saja yang dapat kamu bangun
+                            menggunakan
+                            React?Ingin mengenal lebih lanjut tentang React? Fitur apa saja yang dapat kamu bangun
+                            menggunakan
                             React?
                         </p>
-
-                        <div class="date">
-                            <div class="icon">
-                                <i class="fas fa-calendar-alt"></i>
-                            </div>
-                            <p>Minggu, 22 November 2020</p>
-                        </div>
 
                         <h3>Rp 25.000</h3>
 
                         <div class="btnEvent">
-                            <button>Daftar Event</button>
+                            <button class="btn btn-primary">Daftar Event</button>
                         </div>
                     </a>
 
@@ -608,17 +567,10 @@
                             React?
                         </p>
 
-                        <div class="date">
-                            <div class="icon">
-                                <i class="fas fa-calendar-alt"></i>
-                            </div>
-                            <p>Minggu, 22 November 2020</p>
-                        </div>
-
                         <h3>Rp 25.000</h3>
 
                         <div class="btnEvent">
-                            <button>Daftar Event</button>
+                            <button class="btn btn-primary">Daftar Event</button>
                         </div>
                     </a>
 
@@ -632,17 +584,10 @@
                             React?
                         </p>
 
-                        <div class="date">
-                            <div class="icon">
-                                <i class="fas fa-calendar-alt"></i>
-                            </div>
-                            <p>Minggu, 22 November 2020</p>
-                        </div>
-
                         <h3>Rp 25.000</h3>
 
                         <div class="btnEvent">
-                            <button>Daftar Event</button>
+                            <button class="btn btn-primary">Daftar Event</button>
                         </div>
                     </a>
 
@@ -655,17 +600,10 @@
                             React?
                         </p>
 
-                        <div class="date">
-                            <div class="icon">
-                                <i class="fas fa-calendar-alt"></i>
-                            </div>
-                            <p>Minggu, 22 November 2020</p>
-                        </div>
-
                         <h3>Rp 25.000</h3>
 
                         <div class="btnEvent">
-                            <button>Daftar Event</button>
+                            <button class="btn btn-primary">Daftar Event</button>
                         </div>
                     </a>
 
@@ -679,17 +617,10 @@
                             React?
                         </p>
 
-                        <div class="date">
-                            <div class="icon">
-                                <i class="fas fa-calendar-alt"></i>
-                            </div>
-                            <p>Minggu, 22 November 2020</p>
-                        </div>
-
                         <h3>Rp 25.000</h3>
 
                         <div class="btnEvent">
-                            <button>Daftar Event</button>
+                            <button class="btn btn-primary">Daftar Event</button>
                         </div>
                     </a>
 
@@ -703,17 +634,10 @@
                             React?
                         </p>
 
-                        <div class="date">
-                            <div class="icon">
-                                <i class="fas fa-calendar-alt"></i>
-                            </div>
-                            <p>Minggu, 22 November 2020</p>
-                        </div>
-
                         <h3>Rp 25.000</h3>
 
                         <div class="btnEvent">
-                            <button>Daftar Event</button>
+                            <button class="btn btn-primary">Daftar Event</button>
                         </div>
                     </a>
 
@@ -726,17 +650,10 @@
                             React?
                         </p>
 
-                        <div class="date">
-                            <div class="icon">
-                                <i class="fas fa-calendar-alt"></i>
-                            </div>
-                            <p>Minggu, 22 November 2020</p>
-                        </div>
-
                         <h3>Rp 25.000</h3>
 
                         <div class="btnEvent">
-                            <button>Daftar Event</button>
+                            <button class="btn btn-primary">Daftar Event</button>
                         </div>
                     </a>
 
