Meresponsivekan Hero, dan Alesan  Section

--- a/artikel.html
+++ b/artikel.html
@@ -13,14 +13,9 @@
     <link rel="stylesheet" href="css/font/font.css">
     <link rel="stylesheet" href="css/riset/riset.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/table/table.css">
     <link rel="stylesheet" href="css/responsive/responsive.css">
 
-    <link rel="stylesheet" href="fontawesome/css/all.min.css">
-    <script src="fontawesome/js/all.min.js"></script>
-
     <script src="js/script.js" defer></script>
-    <script src="js/faq.js" defer></script>
 
     <link rel="apple-touch-icon" href="img/logo HIMARAKSI.png">
     <link rel="shortcut icon" href="img/logo HIMARAKSI.png" type="image/x-icon">
@@ -73,7 +68,7 @@
                     </p>
 
                     <div class="cta">
-                        <a href="#artikel" class="btn btn-primary">Lihat Artikel</a>
+                        <a href="#artikel" class="btn btn-primary">Lihat Semua Artikel</a>
                     </div>
                 </div>
                 <div class="img">
