--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     </p>
 
                     <div class="cta">
-                        <a href="series.html" class="btn btn-primary">Explore</a>
+                        <a href="#fitur" class="btn btn-primary">Explore</a>
                     </div>
                 </div>
                 <div class="img">
@@ -86,7 +86,7 @@
 
 
 
-        <section class="containerFitur bg-agakGelap pt-50 pb-100">
+        <section class="containerFitur bg-agakGelap pt-50 pb-100" id="fitur">
             <div class="container">
                 <div class="title">
                     <h1>HMJ MI STMIK AKAKOM</h1>
